--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,8 @@
     </head>
     <body>
         
+
         <script src="js/index.js"></script>
+        <script src="js/miApi.js"></script>
     </body>
 </html>
