Tercer guardado de archivos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        
+        <div id="datos"></div>
 
         <script src="js/index.js"></script>
         <script src="js/miApi.js"></script>
